[project]
name = "ask-ollama"
version = "0.1.0"
description = "A MCP-based Ollama API interaction service providing standardized interfaces and structured responses"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ShadowSinger", email = "shadowsinger.tp@gmail.com"},
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
]
